# intro_mlp

./: README.md  pyproject.toml
data/: ressonanciaMLP.csv
notebook/: mlp_regressor.ipynb
